@@ -2,6 +2,7 @@
 
     user visible changes:
     * added retry mechanism to utils.open_for_read_file_or_url
+    * fixed calculation of num_required_files in InstlInstanceSync.mark_required_items
 
 15/4/2018 1.7.2.2
 
